# PRSAI_MCP

./: PPT_Translator_Product_Review.md  README.EN.md  README.md
PPT-Translation-MCP/: .env  .env.example  Dockerfile  README.md  docker-compose.yml
PPT-Translation-MCP/scripts/: mcp_integration_test.py
PPT-Translation-MCP/src/prs_ai_staging_mcp/: __main__.py  server.py
PrsAiStaging-MCP/: .env.example  README.md  pyproject.toml
PrsAiStaging-MCP/scripts/: smoke_check.py  sse_smoke_test.py
PrsAiStaging-MCP/src/prs_ai_staging_mcp/: server.py
sessions/pet_brush_20260421_173422/: .active
sessions/pet_brush_20260421_173422/scripts/: edit_pet_brush.py
